# my-first-story

./: .gitignore  .gitmodules  CMakeLists.txt  build  watch
assets/: README.md  black-pawn.aseprite  frame.png~  glow.shd  solid_color.shd  statue.aseprite  white-pawn.aseprite
bgame/: CMakeLists.txt  loader.c
bgame/include/bgame/: allocator.h  asset.h  entrypoint.h  loader.h  log.h  reloadable.h  scene.h  serialization.h  ui.h
bgame/include/bgame/allocator/: frame.h  tracked.h
bgame/include/bgame/asset/: 9patch.h
bgame/include/bgame/ui/: animation.h  textinput.h
bgame/src/: allocator.c  asset.c  entrypoint.c  internal.c  internal.h  libs.c  loader.c  loader_interface.h  log.c  scene.c  serialization.c  ui.c
bgame/src/allocator/: frame.c  tracked.c
bgame/src/asset/: 9patch.c  sprite.c
bgame/src/ui/: animation.c
dmux/: scratch.json
scratch/: CMakeLists.txt  empty_scene.c  main.c  main_scene.c  shader_test.c
ttchess/: CMakeLists.txt  main.c  serialization.h  ttchess.c  ttchess.h
ttchess/scenes/: game.c  game.h
